# ZK-Compliance-Shield

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
contracts/compliance-shield/: Cargo.toml
contracts/compliance-shield/src/: lib.rs
docs/: architecture.md  circuit-spec.md
scripts/: deploy.sh  mock_proof_generator.py  requirements.txt
