[package]
name    = "compliance-shield"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "26.0.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "26.0.0", features = ["testutils", "alloc"] }

[profile.release]
opt-level        = "z"
overflow-checks  = true
debug            = false
strip            = "symbols"
debug-assertions = false
panic            = "abort"
codegen-units    = 1
lto              = true
