[package]
name    = "compliance-shield"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "25.3.1", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "25.3.1", features = ["testutils", "alloc"] }

[profile.release]
opt-level        = "z"
overflow-checks  = true
debug            = false
strip            = "symbols"
debug-assertions = false
panic            = "abort"
codegen-units    = 1
lto              = true
